--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="select_photo_gallery">select photo gallery</string>
     <string name="crop_image">crop image</string>
+    <string name="croup">croup</string>
+    <string name="rotate_button">rotate</string>
 </resources>
